<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="season"
            type="fr.steph.showmemories.model.SeasonModel" />
    </data>

    <fr.steph.accordionlayout.AccordionLayout
        android:id="@+id/season_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:headingDrawable="@drawable/ic_more"
        app:headingDrawableHeight="28dp"
        app:headingDrawableWidth="28dp"
        app:headingString="@{season.name}"
        app:isAnimated="true"
        app:isExpanded="false"
        app:isPartitioned="false"
        app:layout_constraintTop_toTopOf="parent"
        tools:headingString="@string/season_header">

        <TextView
            android:id="@+id/season_watch_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/season_watch_date"
            android:text="@string/season_date_text"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/season_watch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textStyle="italic"
            app:dateAsText="@{season.watchDate}"
            tools:text="@string/default_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/season_episode_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/item_margin"
                android:text="@{season.movie ? @string/movie_duration_title : @string/season_episode_count}"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/season_episode_count" />

            <TextView
                android:id="@+id/season_episode_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/item_margin"
                android:importantForAutofill="no"
                android:text="@{Integer.toString(season.movie ? season.movieDuration : season.episodeCount)}"
                tools:ignore="TouchTargetSizeCheck"
                tools:text="@string/default_number" />

            <TextView
                android:id="@+id/season_note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/item_margin"
                android:text="@{season.movie ? @string/movie_note : @string/season_note}"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/season_note" />

            <TextView
                android:id="@+id/season_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/item_margin"
                android:importantForAutofill="no"
                android:text="@{@string/note(season.note)}"
                tools:ignore="TouchTargetSizeCheck"
                tools:text="@string/default_note" />

            <TextView
                android:id="@+id/season_summary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/item_margin"
                android:text="@{season.movie ? @string/movie_summary : @string/season_summary}"
                tools:text="@string/season_summary" />

            <TextView
                android:id="@+id/season_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_margin"
                android:text="@{season.summary.isEmpty() ? @string/no_summary : season.summary}"
                tools:text="@string/no_summary" />

            <TextView
                android:id="@+id/season_review_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/item_margin"
                android:text="@{season.movie ? @string/movie_review : @string/season_review}"
                tools:text="@string/season_review" />

            <TextView
                android:id="@+id/season_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_margin"
                android:text="@{season.review.isEmpty() ? @string/no_review : season.review}"
                tools:text="@string/no_review" />

        </LinearLayout>

    </fr.steph.accordionlayout.AccordionLayout>

</layout>

