<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.Material3.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:background="@color/white"
            app:collapsedTitleGravity="center"
            app:collapsedTitleTextAppearance="@style/Toolbar.TitleTextCollapsed"
            app:contentScrim="@color/dark_transparency_40"
            app:expandedTitleMarginBottom="30dp"
            app:expandedTitleMarginEnd="@dimen/details_expanded_title_margin_end"
            app:expandedTitleMarginStart="30dp"
            app:expandedTitleTextAppearance="@style/Toolbar.TitleTextExpanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:maxLines="2"
            app:titleCollapseMode="scale"
            app:toolbarId="@id/details_toolbar">

            <ImageView
                android:id="@+id/details_show_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:contentDescription="@string/show_image_description"
                android:fitsSystemWindows="true"
                android:foreground="@color/dark_transparency_80"
                android:scaleType="centerCrop"
                android:transitionName="@string/show_details_image_transition"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/default_show_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/details_title_background" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_close_arrow"
                app:popupTheme="@style/ThemeOverlay.Material3.Light"
                app:titleMarginEnd="@dimen/details_collapsed_title_margin_end"
                tools:title="@string/default_name" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:fadingEdgeLength="20dp"
        android:overScrollMode="never"
        android:padding="@dimen/default_margin"
        android:requiresFadingEdge="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_show_note_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:importantForAutofill="no"
                    android:text="@string/show_note"
                    app:layout_constraintEnd_toStartOf="@id/details_show_date_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/details_show_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/item_margin"
                    android:importantForAutofill="no"
                    app:layout_constraintEnd_toEndOf="@id/details_show_note_title"
                    app:layout_constraintStart_toStartOf="@id/details_show_note_title"
                    app:layout_constraintTop_toBottomOf="@id/details_show_note_title"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:text="@string/default_note" />


                <TextView
                    android:id="@+id/details_show_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:importantForAutofill="no"
                    android:text="@string/show_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/details_show_note_title"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/details_show_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/item_margin"
                    android:importantForAutofill="no"
                    app:layout_constraintEnd_toEndOf="@id/details_show_date_title"
                    app:layout_constraintStart_toStartOf="@id/details_show_date_title"
                    app:layout_constraintTop_toBottomOf="@id/details_show_date_title"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:text="@string/default_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/details_show_synopsis_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/item_margin"
                android:text="@string/show_synopsis" />

            <TextView
                android:id="@+id/details_show_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_margin"
                android:text="@string/no_synopsis"
                tools:text="@string/no_synopsis" />

            <TextView
                android:id="@+id/details_show_review_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/item_margin"
                android:text="@string/show_review" />

            <TextView
                android:id="@+id/details_show_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_margin"
                android:text="@string/no_review"
                tools:text="@string/no_review" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seasons_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_season_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin">

                <TextView
                    android:id="@+id/add_season_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_season"
                    app:layout_constraintEnd_toStartOf="@id/add_season_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/add_season_icon"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:contentDescription="@string/add_season_icon_description"
                    android:src="@drawable/ic_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/add_season_text"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

