<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shows"
            type="java.util.List&lt;fr.steph.showmemories.models.ShowModel>" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/profile_stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            android:importantForAutofill="no"
            android:text="@string/statistics"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_show_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            android:importantForAutofill="no"
            android:text="@string/show_count"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/profile_show_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/item_margin"
            android:importantForAutofill="no"
            android:text="@{Integer.toString(shows.size())}"
            android:textSize="15sp"
            tools:text="@string/default_number" />

    </LinearLayout>

</layout>