<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="fr.steph.showmemories.viewmodel.FilterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/filter_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toTopOf="parent"
            app:queryBackground="@null"
            app:queryHint="@string/query_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/filter_search_view">

            <androidx.cardview.widget.CardView
                android:id="@+id/icon_alphabetical_sort"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                android:activated="@{!viewModel.alphabeticalFilter  &amp;&amp; viewModel.alphabeticalFilter != null ? true : false}"
                android:elevation="10dp"
                android:selected="@{viewModel.alphabeticalFilter != null}"
                app:cardBackgroundColor="@drawable/sort_icons_background_selector"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:activated="@{!viewModel.alphabeticalFilter  &amp;&amp; viewModel.alphabeticalFilter != null ? true : false}"
                    android:contentDescription="@string/abc_sort_icon_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sort_alphabetic_image_selector" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/icon_watch_date_sort"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                android:activated="@{!viewModel.watchDateFilter &amp;&amp; viewModel.watchDateFilter != null ? true : false}"
                android:elevation="10dp"
                android:selected="@{viewModel.watchDateFilter != null}"
                app:cardBackgroundColor="@drawable/sort_icons_background_selector"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:activated="@{!viewModel.watchDateFilter &amp;&amp; viewModel.watchDateFilter != null ? true : false}"
                    android:contentDescription="@string/watch_date_sort_icon_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sort_watch_date_image_selector" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/icon_note_sort"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                android:activated="@{!viewModel.noteFilter &amp;&amp; viewModel.noteFilter != null? true : false}"
                android:elevation="10dp"
                android:selected="@{viewModel.noteFilter != null}"
                app:cardBackgroundColor="@drawable/sort_icons_background_selector"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:activated="@{!viewModel.noteFilter &amp;&amp; viewModel.noteFilter != null? true : false}"
                    android:contentDescription="@string/note_sort_icon_description"
                    android:scaleType="centerCrop"
                    android:selected="@{viewModel.noteFilter != null}"
                    android:src="@drawable/sort_note_image_selector" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>